# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_remove_label_tasks.py
labels/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html  label_update.html
statuses/: models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/tempates/statuses/: status_list.html
statuses/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html  status_update.html
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: index.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py
tasks/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_update.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_password_alter_user_username.py  0003_alter_user_password.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_remove_user_full_name_user_created_at_and_more.py
users/templates/users/: login.html  user_confirm_delete.html  user_form.html  user_list.html  user_update_form.html
