[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Glam52 <gla_max@outlook.com>"]
readme = "README.md"
packages = [
    { include = "hexlet_code" },
    { include = "task_manager" },
    { include = "labels" },
    { include = "statuses" },
    { include = "tasks" },
    { include = "users" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.3"
django-crispy-forms = "^2.3"
rollbar = "^0.16.3"
django-environ = "^0.11.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.12.0"
django-stubs = "^5.1.0"
build = "^1.2.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"